# trends

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/trends_cli/: main.py  models.py
src/trends_cli/api/: trends.py
src/trends_cli/commands/: compare.py  related.py  search.py  trending.py
src/trends_cli/display/: chart.py  format.py  tables.py
