[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trends-cli"
version = "0.1.0"
description = "Terminal CLI for Google Trends"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pytrends>=4.9",
    "plotext>=5.2",
]

[project.scripts]
trends = "trends_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trends_cli"]

[tool.uv]
dev-dependencies = []
